cabal-version:      2.4
name:               refined-extras
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC ==8.10.7
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/refined-extras/
bug-reports:        https://github.com/tbidne/refined-extras/issues
synopsis:           Increased functionality for refined types.
description:
  @refined-extras@ provides extra functionality for the [refined](https://hackage.haskell.org/package/refined)
  package. This functionality can be broken into several categories.
  .
  __Polymorphism__: Allows us to write functions that are polymorphic in the
  predicate constraints they require, e.g.,
  .
  @
    safeDiv :: Implies p NonZero => Int -> Refined p Int -> Int
  @
  .
  __Predicates__: Predefined predicates.
  .
  __Unsafe__: Unsafe functions for when we __know__ something holds but cannot
  prove it to the type system, e.g.,
  .
  @
  m = $$(refineTH 7) :: Refined Positive Int
  n = $$(refineTH 8) :: Refined Positive Int
  unsafeLiftR2 (+) m n -- Refined Positive Int
  @
  .
  __Utils__: Various convenience utilities.
  .
  The entrypoint is "Refined.Extras", which reexports everything.

category:           Refined Types
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/refined-extras

common common-exts
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Refined.Extras
    Refined.Extras.Polymorphism
    Refined.Extras.Polymorphism.Internal
    Refined.Extras.Predicates.Foldable
    Refined.Extras.Predicates.Text
    Refined.Extras.Unsafe
    Refined.Extras.Utils

  build-depends:
    , base          >=4.14.0.0 && <4.17
    , refined       ^>=0.6
    , text          ^>=1.2.3.2
    , these-skinny  ^>=0.7.4

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest         >=0.16.3 && <0.21
    , refined-extras

  hs-source-dirs:   test/doctest
  default-language: Haskell2010
