cabal-version:      2.4
name:               refined-extras
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC ==8.10.7
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/refined-extras/
bug-reports:        https://github.com/tbidne/refined-extras/issues
synopsis:           Increased functionality for refined types.
description:
  @refined-extras@ provides extra functionality for the [refined](https://hackage.haskell.org/package/refined) package.

category:           Refined Types
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/refined-extras

common common-exts
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Refined.Extras
    Refined.Extras.Polymorphism
    Refined.Extras.Polymorphism.Internal
    Refined.Extras.Polymorphism.Internal.Terms
    Refined.Extras.Predicates.Foldable
    Refined.Extras.Predicates.Text
    Refined.Extras.Unsafe
    Refined.Extras.Utils

  build-depends:
    , base          >=4.14.0.0 && <4.17
    , refined       ^>=0.6
    , text          ^>=1.2.3.2
    , these-skinny  ^>=0.7.4

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Tests.Polymorphism.Implies
  build-depends:
    , base
    , refined
    , refined-extras
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hunit     >=0.9     && <0.11
    , text

  hs-source-dirs:   test/unit
  default-language: Haskell2010

test-suite props
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Gens
    MaxRuns
    Tests.Polymorphism.CNF
    Tests.Polymorphism.Implies

  build-depends:
    , base
    , hedgehog        ^>=1.0.2
    , refined
    , refined-extras
    , tagged          ^>=0.8.6
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.0.0.2 && <1.2
    , text

  hs-source-dirs:   test/props
  default-language: Haskell2010

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest         >=0.16.3 && <0.21
    , refined-extras

  hs-source-dirs:   test/doctest
  default-language: Haskell2010
