cabal-version:      2.4
name:               refined-extras
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.1
   || ==9.10.1

copyright:          2021-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/refined-extras/
bug-reports:        https://github.com/tbidne/refined-extras/issues
synopsis:           Increased functionality for refined types.
description:
  @refined-extras@ provides extra functionality for the [refined](https://hackage.haskell.org/package/refined) package.

category:           Refined Types
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/refined-extras

common common-lang
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Refined.Extras
    Refined.Extras.Polymorphism
    Refined.Extras.Polymorphism.Internal
    Refined.Extras.Polymorphism.Internal.Terms
    Refined.Extras.Predicates.Foldable
    Refined.Extras.Predicates.Text
    Refined.Extras.Unsafe
    Refined.Extras.Utils

  build-depends:
    , base          >=4.14.0.0  && <4.21
    , bytestring    >=0.10.12.0 && <0.13
    , refined       >=0.6       && <0.9
    , text          >=1.2.3.2   && <2.2
    , these-skinny  ^>=0.7.4

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Tests.Polymorphism.CNF
    Tests.Polymorphism.Implies

  build-depends:
    , base
    , refined
    , refined-extras
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hunit     >=0.9     && <0.11

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite props
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Gens.Numeric
    Gens.Polymorphism
    Gens.Text
    Tests.Polymorphism.CNF
    Tests.Polymorphism.Implies
    Tests.Predicates.Foldable
    Tests.Predicates.Text
    Utils

  build-depends:
    , base
    , bytestring
    , hedgehog        >=1.0.2   && <1.5
    , refined
    , refined-extras
    , tasty
    , tasty-hedgehog  >=1.0.0.2 && <1.5
    , text

  hs-source-dirs: test/props
  ghc-options:    -threaded -with-rtsopts=-N

test-suite doctest
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , doctest    >=0.16.3 && <0.23
    , env-guard  ^>=0.2

  hs-source-dirs: test/doctest
